# CSCI474_project2

./: .gitignore  CMakeLists.txt  README
includes/: cscan.h  data_struct.h  fifo.h  fscan.h  lifo.h  n_step_scan.h  scan.h  sstf.h
src/: cscan.cpp  fifo.cpp  fscan.cpp  lifo.cpp  main.cpp  n_step_scan.cpp  scan.cpp  sstf.cpp
